sidebar fix and playlist name truncate

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,34 @@
   .button {
     @apply h-6 w-6 cursor-pointer hover:scale-105 transition-all transform ease-out;
   }
+  .song-grid {
+    @apply grid grid-cols-2 md:grid-cols-5 items-center hover:bg-white hover:bg-opacity-5 rounded-md p-2 pl-4 text-[#B3B3B3];
+  }
+  .song-desc {
+    @apply text-sm group-hover:text-white cursor-pointer hover:underline;
+  }
+  .sidebar-button {
+    @apply hover:text-white transition duration-100;
+  }
+  .sidebar-container {
+    @apply text-[#B3B3B3] text-xs lg:text-sm pt-5 pl-6 pr-4 h-[90vh] hidden md:block md:w-[21vw] xl:w-[14vw];
+  }
+}
+
+@layer base {
+  @font-face {
+    font-family: "spotifyCircular";
+    font-weight: 400;
+    src: url("../fonts/spotifyCircularLight.otf") format("opentype");
+  }
+  @font-face {
+    font-family: "spotifyCircular";
+    font-weight: 600;
+    src: url("../fonts/spotifyCircularMedium.otf") format("opentype");
+  }
+  @font-face {
+    font-family: "spotifyCircular";
+    font-weight: 700;
+    src: url("../fonts/spotifyCircularBold.otf") format("opentype");
+  }
 }
